# cs180-23-quantum

./: .gitignore  CMakeLists.txt  README.md  collections.cpp  collections.h  databases.cpp  databases.h  documents.cpp  documents.h  main.cpp  package-lock.json
Backend/: Makefile  README.md  build.sh  clean.sh  collection.cpp  collection.h  collections.cpp  collections.h  databases.cpp  databases.h  document.cpp  document.h  documents.cpp  documents.h  filesystemobject.cpp  filesystemobject.h  main.cpp  mastercontainer.cpp  mastercontainer.h  query.cpp  query.h
Backend/All_Databases/Transport/Planes/: 1.json
Frontend/QuantumDB/: README.md  package-lock.json  package.json  tailwind.config.js
Frontend/QuantumDB/components/: FixedSidebar.jsx  Logo.jsx  Navbar.jsx  Sidebar.jsx  ThemeToggle.jsx  index.js
Frontend/QuantumDB/public/: index.html  manifest.json
Frontend/QuantumDB/src/: App.js  App.jsx  index.js
Frontend/QuantumDB/src/components/: AuthContext.js  Background.js  CreateButton.js  Document.js  FixedSidebar.js  Folder.js  Layout.js  Logo.js  Navbar.js  Operations.js  Sidebar.js  ThemeToggle.js
Frontend/QuantumDB/src/functions/: AnimateCharacters.js  AnimateWords.js  CreateDocument.js  CreateFolder.js  DeleteDocument.js  DeleteFolder.js  DownloadDocument.js  ImportFile.js  ReadCollection.js  ReadFile.js  SuccessNotification.js  UpdateDocument.js  UpdateFolder.js  WarningNotification.js
Frontend/QuantumDB/src/pages/: Collection.js  CreateProfile.js  Database.js  Document.js  Error.js  Home.js  Login.js  (+3 more)
database/Transport/Planes/: 1.json  2.json
(+9 files in other folders)
